syntax = "proto2";

package sf.solana.block_meta.v1;

message PbInitializeLayout {
  required uint32 nonce = 1;
}

message PbReclaimMintAuthorityLayout {
  required uint32 nonce = 1;
}

message PbStakeLayout {
  required uint32 nonce = 1;
  required uint64 amount = 2;
}

message PbUnstakeLayout {
  required uint32 nonce = 1;
  required uint64 amount = 2;
}

message Arg {
  required string instruction_type = 1;
  optional PbInitializeLayout initialize = 2;
  optional PbReclaimMintAuthorityLayout reclaimMintAuthority = 3;
  optional PbStakeLayout stake = 4;
  optional PbUnstakeLayout unstake = 5;
}

message InputAccounts {
  optional string tokenMint = 1;
  optional string tokenVault = 2;
  optional string initializer = 3;
  optional string systemProgram = 4;
  optional string tokenProgram = 5;
  optional string rent = 6;
  optional string xTokenMint = 7;
  optional string authority = 8;
  optional string tokenFrom = 9;
  optional string tokenFromAuthority = 10;
  optional string xTokenTo = 11;
  optional string xTokenFrom = 12;
  optional string xTokenFromAuthority = 13;
  optional string tokenTo = 14;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}